# CudaRaytracer

./: .gitattributes  .gitignore  .gitmodules  README.md  _config.yaml  checkpoint.md  index.html  index.md  params.json  proposal.md  sneakpeak.md
_layouts/: index.html  page.html
docs/: PROPOSAL.md
libs/sdl2/: .gitignore
libs/tinyxml2/: .gitignore
scenes/: cornell-box-cycles.blend  cornell-box-cycles.dae  plane.blend  triangles.blend
src/: CMakeLists.txt
src/application/: CMakeList.txt  CMakeLists.txt  application.cpp  application.h
src/geometry/: CMakeLists.txt  geometry.cpp  geometry.cu  geometry.h  mesh.h
src/libs/glm/doc/: glm.docx
src/libs/glm/glm/gtx/: string_cast.hpp  string_cast.inl
src/materials/: materials.cpp  materials.h
src/math/: math.h
src/renderer/: CMakeLists.txt  renderer.cpp  renderer.cu  renderer.h
src/scene/: CMakeLists.txt  camera.h  scene.cpp  scene.cu  scene.h
src/utils/: SDLManager.h  bih.h  vector.h
stylesheets/: stylesheet.css
